minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: thanos
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: minio
