ingress-minio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  namespace: thanos
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: minio-k8s.io
    http:
      paths:
      - backend:
          serviceName: minio
          servicePort: 9000
