ingress-thanos-query.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thanos-query
  namespace: thanos
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: thanos-query-k8s.io
    http:
      paths:
      - backend:
          serviceName: thanos-query
          servicePort: 9090
